# PromptFlow

./: .gitmodules  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  file.rs  mod.rs  window.rs
src-tauri/src/models/: config.rs  mod.rs  prompt.rs
src-tauri/src/services/: accessibility.rs  mod.rs  panel.rs  shortcut.rs  window.rs
src-tauri/src/utils/: error.rs  markdown.rs  mod.rs
src/components/dialogs/: AIPresetCreatorDialog.tsx  OnboardingDialog.tsx  PromptListDialog.tsx  QuickAddPromptDialog.tsx  SaveDialog.tsx  SettingsDialog.tsx  TemplateDialog.tsx  index.ts
src/components/layout/: TitleBar.tsx
src/components/pages/: SettingsPage.tsx
src/components/sections/: InputSection.tsx  OutputSection.tsx
src/components/ui/: Button.tsx  ClarificationCards.tsx  Input.tsx  Modal.tsx  TextArea.tsx  index.ts
src/hooks/: useConfig.ts  usePrompts.ts
src/lib/: storage.ts
src/lib/i18n/: context.tsx  index.ts
src/lib/services/: aiService.ts  apiUtils.ts  checkerService.ts  configService.ts  fileService.ts  index.ts  jsonTools.ts  llmClient.ts  promptService.ts  structuredOutput.ts  windowService.ts
src/services/: configService.ts  promptManager.ts
src/types/: index.ts  intent.ts
